updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a student studying full stack web development. Currently I am studying at the U of M through one of their coding bootcamps.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I currently live in Buffalo Minnesota.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hanging out with friends and family, building computers and video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would really like to become a web developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Buffalo Minnesota on Lake Sullivan</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have spent most of my life around computers. Getting a deeper knowledge on how they operate and producing software would be a great skill to have. I feel like our world revolves around technology so being one to produce softwares to use that technology is why I would like to be in this field.</p>
     </section>
 
     <footer id="footer">
